--- a/dist.ini
+++ b/dist.ini
@@ -1,9 +1,9 @@
 name             = Mojolicious-Plugin-ORM-DBIx
 main_module      = lib/Mojolicious/Plugin/ORM/DBIx.pm
-version          = 0
+version          = 1.00
 author           = Mark Tyrrell <mark@tyrrminal.dev>
 license          = MIT
-copyright_holder = tyrrminal
+copyright_holder = Mark Tyrrell
 copyright_year   = 2024
 
 [@Starter::Git]
@@ -28,13 +28,13 @@ type = markdown
 filename = README.md
 
 [Prereqs / RuntimeRequires]
-perl = 5.026000
-DBI = 1.643
+perl                        = 5.026000
+DBI                         = 1.643
 DBIx::Class::Schema::Loader = 0.07052
-Mojolicious = 9.35
+Mojolicious                 = 9.35
 
 [Prereqs / TestRequires]
-Test2::Suite = 0.000155
+Test2::Suite                = 0.000155
 
 [MetaResources]
 bugtracker.web  = https://github.com/tyrrminal/mojolicious-plugin-orm-dbix/issues
