--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,6 @@
 name             = Mojolicious-Plugin-ORM-DBIx
 main_module      = lib/Mojolicious/Plugin/ORM/DBIx.pm
-version          = 1.00
+version          = 0.01
 author           = Mark Tyrrell <mark@tyrrminal.dev>
 license          = MIT
 copyright_holder = Mark Tyrrell
@@ -29,9 +29,11 @@ filename = README.md
 
 [Prereqs / RuntimeRequires]
 perl                        = 5.026000
-DBI                         = 1.643
+DBIx::Class                 = 0.082843
 DBIx::Class::Schema::Loader = 0.07052
 Mojolicious                 = 9.35
+Readonly                    = 2.05
+Syntax::Keyword::Try        = 0.29
 
 [Prereqs / TestRequires]
 Test2::Suite                = 0.000155
